# AFU

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE
Include/communication/: tcp.hpp  udp.hpp
Include/interface/: worker_interface.h
Include/subscription/: dispatcher.hpp  subscription.hpp
Include/utils/: collection.hpp  convertor.hpp  dispatcher_base.hpp  event.hpp
Samples/BuilderSample/: CmakeLists.txt  main.cpp
Samples/PubSubSample/: CmakeLists.txt  main.cpp
Samples/TcpSample/: CmakeLists.txt  main.cpp
Samples/UdpSample/: CmakeLists.txt  main.cpp
